platform/gateway/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: kube-deploy-envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
